@@ -1,44 +1,54 @@
 /*
- *  IKIconPositions.h
- *  
- *
- *  Created by Uli Kusterer on 04.01.05.
- *  Copyright 2005 M. Uli Kusterer. All rights reserved.
- *
- */
+	IKIconPositions.h
+
+	IKIconPositions is where possible positions to composite 
+	IKIcon object are declared.
+
+	Copyright (C) 2005 Uli Kusterer <contact@zathras.de>
+	                   Quentin Mathe <qmathe@club-internet.fr>	                   
+
+	Author:   Uli Kusterer <contact@zathras.de>
+	          Quentin Mathe <qmathe@club-internet.fr>
+	Date:  January 2005
+
+	This library is free software; you can redistribute it and/or
+	modify it under the terms of the GNU Lesser General Public
+	License as published by the Free Software Foundation; either
+	version 2.1 of the License, or (at your option) any later version.
+
+	This library is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+	Lesser General Public License for more details.
+
+	You should have received a copy of the GNU Lesser General Public
+	License along with this library; if not, write to the Free Software
+	Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+*/
 
 #ifndef ICONKIT_IKICONPOSITIONS_H
 #define ICONKIT_IKICONPOSITIONS_H 1
 
-// -----------------------------------------------------------------------------
-//  Headers:
-// -----------------------------------------------------------------------------
-
 #include <Foundation/Foundation.h>
 
-
-// -----------------------------------------------------------------------------
-//  Constants:
-// -----------------------------------------------------------------------------
-
 // Flags from which IKBadgePositions are made up. Don't use these, use IKBadgePosition:
-enum IKBadgePositionFlags
+typedef enum _IKBadgePositionFlags
 {
     IKBadgePositionFlagBottom       = (1 << 0),
     IKBadgePositionFlagLeft         = (1 << 1),
     IKBadgePositionFlagTop          = (1 << 2),
     IKBadgePositionFlagRight        = (1 << 3),
     IKBadgePositionFlagCenter       = (1 << 4),
-    IKBadgePositionFlagSemantic     = (1 << 15),    // High bit set means: interpret low 15 bits as icon number.
-    IKBadgePositionFlagSemanticMask = 0x7FFF        // Use this to mask out the high bit. (Is this endian-safe?)
+    IKBadgePositionFlagSemantic     = (1 << 15), // High bit set means: interpret low 15 bits as icon number.
+    IKBadgePositionFlagSemanticMask = 0x7FFF     // Use this to mask out the high bit. (Is this endian-safe?)
 };
 
 // Badge position values for badgeRectForPosition:
-enum IKBadgePosition
+typedef enum _IKBadgePosition
 {
     // Semantic positions: (map to absolute positions, but may change depending on OS/theme)
-    //  Use e.g. IKBadgePositionStandardSymlink for the theme-provided symlink arrow icon *only*! (they map to full-size on Mac because there the system badges *are* full size)
-    //  For other icons, use e.g. IKBadgePositionSymlink instead!!!
+    // Use e.g. IKBadgePositionStandardSymlink for the theme-provided symlink arrow icon *only*! (they map to full-size on Mac because there the system badges *are* full size)
+    // For other icons, use e.g. IKBadgePositionSymlink instead!!!
     IKBadgePositionStandardLink             = (IKBadgePositionFlagSemantic | 0),
     IKBadgePositionLink                     = (IKBadgePositionFlagSemantic | 1),
     IKBadgePositionStandardReadOnly         = (IKBadgePositionFlagSemantic | 2),
@@ -53,7 +63,7 @@ enum IKBadgePosition
     IKBadgePositionScript                   = (IKBadgePositionFlagSemantic | 11),
     IKBadgePositionStandardWriteOnly        = (IKBadgePositionFlagSemantic | 12),
     IKBadgePositionWriteOnly                = (IKBadgePositionFlagSemantic | 13),
-        // ... up to 32767 special icon positions :-)
+	// ... up to 32767 special icon positions :-)
     
     // Absolute positions:
     IKBadgePositionNone             = 0,
@@ -66,7 +76,6 @@ enum IKBadgePosition
     IKBadgePositionLeft             = (IKBadgePositionFlagLeft | IKBadgePositionFlagCenter),
     IKBadgePositionRight            = (IKBadgePositionFlagRight | IKBadgePositionFlagCenter),
     IKBadgePositionCenter           = (IKBadgePositionFlagCenter)
-};
-typedef enum IKBadgePosition IKBadgePosition;
+} IKBadgePosition;
 
 #endif /*ICONKIT_IKICONPOSITIONS_H*/
