@@ -1,22 +1,35 @@
 /*
- *  IKIcon.h
- *  
- *
- *  Created by Uli Kusterer on 31.12.04.
- *  Copyright 2004 M. Uli Kusterer. All rights reserved.
- *
- */
+	IconKit.h
+
+	IconKit.h is IconKit umbrella header
+
+	Copyright (C) 2004 Uli Kusterer <contact@zathras.de>
+	                   Quentin Mathe <qmathe@club-internet.fr>	                   
+
+	Author:   Uli Kusterer <contact@zathras.de>
+	          Quentin Mathe <qmathe@club-internet.fr>
+	Date:  December 2004
+
+	This library is free software; you can redistribute it and/or
+	modify it under the terms of the GNU Lesser General Public
+	License as published by the Free Software Foundation; either
+	version 2.1 of the License, or (at your option) any later version.
+
+	This library is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+	Lesser General Public License for more details.
+
+	You should have received a copy of the GNU Lesser General Public
+	License along with this library; if not, write to the Free Software
+	Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+*/
 
 #ifndef ICONKIT_ICONKIT_H
 #define ICONKIT_ICONKIT_H 1
 
-// -----------------------------------------------------------------------------
-//  Headers:
-// -----------------------------------------------------------------------------
-
 #include "IKIcon.h"
 #include "IKIconIdentifier.h"
 #include "IKWorkspaceAdditions.h"
-
 
 #endif /*ICONKIT_IKICON_H*/
